<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <EditText
            android:id="@+id/edit_provider_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_provider_name"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/edit_provider_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/hint_contact_number"
            android:inputType="phone" />

        <EditText
            android:id="@+id/edit_provider_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/hint_address"
            android:inputType="textCapWords|textMultiLine" />

        <EditText
            android:id="@+id/edit_provider_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/hint_notes"
            android:inputType="textCapSentences|textMultiLine" />
    </LinearLayout>
</ScrollView>

